fix overflow for partner portal

--- a/v2-website/src/css/customTheme.css
+++ b/v2-website/src/css/customTheme.css
@@ -122,6 +122,10 @@ body, h1, h2, h3, h4, h5 {
 height: 100%;
 }
 
+.docMainContainer_gTbr {
+  overflow: auto;
+}
+
 .side-right-nav-container-announcements{
   background-color: initial;
 }
